--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
 *{box-sizing: border-box}
 body{
 	margin:0;
-	font-family: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+	font-family: 'Quicksand', sans-serif;
 	color:#111827;
 	background:var(--bg);
 	-webkit-font-smoothing:antialiased;
